<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help1"
        android:gravity="center"
        android:textSize="40sp"
        android:layout_marginTop="50dp"
        android:textColor="@color/Navigatar_color"
        android:layout_marginBottom="50dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help2"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="#000000"
        android:layout_marginBottom="25dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help3"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="#000000"
        android:layout_marginBottom="25dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help4"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="#000000"
        android:layout_marginBottom="25dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help5"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="#000000"
        android:layout_marginBottom="25dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:text="@string/help6"
        android:textColor="#000000"
        android:textSize="18sp" />

</LinearLayout>